[T] Removed default Logging FileHandler